# Selector-Complexity-Framework

./: README.md  pyproject.toml
analysis/: analyze_results.py  extract_patterns.py  pattern_analysis.json
discovery/: config.py  landscape.py  run_discovery.py  state.json
results/: 3-XOR_10.json  3-XOR_15.json  3-XOR_20.json  3-XOR_30.json  BinLWE_10.json  BinLWE_6.json  BinLWE_8.json  Factoring_4.json  Factoring_6.json  Factoring_8.json  Goldreich_12.json  Goldreich_16.json  Goldreich_8.json  PHP-C_2.json  PHP-C_3.json  PHP-C_4.json  PHP-C_5.json  PHP-E_2.json  PHP-E_3.json  PHP-E_4.json  PHP-E_5.json  PHP-E_6.json  PHP-E_7.json  PHP-E_8.json  PHP_2.json  PHP_3.json  PHP_4.json  PHP_5.json  PHP_6.json  SC3_proof.json  SubsetSum_3.json  SubsetSum_4.json  SubsetSum_5.json  Tseitin_6.json  Tseitin_8.json
selector_complexity/: __init__.py  classifier.py  core.py  discovery.py  discovery_strategies.py  families.py  hardness.py  optimizer.py  patterns.py  php.py  predictor.py  selectors.py  solvers.py  strategy.py  tseitin.py
tests/: run_all_tests.py
theory/: 01_definitions.py  02_php_level0.py  03_phpe_level1.py  04_phpc_level2_conjecture.py  05_phpc_selector_lower_bound.py  06_phpc_formal_identity.py  07_phpc_growth_analysis.py  08_phpc_symmetry_argument.py  09_hierarchy_theorem.py  10_level3_candidates.py  11_sc3_proof.py
